# robot2DGame

./: .gitignore  CMakeLists.txt  gen-project.sh
cmake/: macro.cmake
engine/: CMakeLists.txt
engine/include/robot2DGame/: Api.hpp  AppContext.hpp  Application.hpp  Font.hpp  IStateMachine.hpp  QuadBatchRender.hpp  State.hpp  StateMachine.hpp  Text.hpp
engine/include/robot2DGame/components/: BroadphaseComponent.hpp  CollisionComponent.hpp  DrawableComponent.hpp  SpriteComponent.hpp  TextComponent.hpp  TransformComponent.hpp  UIAnimationComponent.hpp  UIHitbox.hpp
engine/include/robot2DGame/experimental/audio/: ALHelpers.hpp  ALResource.hpp  Audio.hpp  AudioData.hpp  Music.hpp  Sound.hpp  SoundBuffer.hpp  SoundSource.hpp  SoundStream.hpp
engine/include/robot2DGame/systems/: RendererSystem.hpp  SpriteRendererSystem.hpp  SpriteSystem.hpp  TextSystem.hpp  UIAnimationSystem.hpp  UISystem.hpp
engine/source/: Api.cpp  Application.cpp  Font.cpp  State.cpp  StateMachine.cpp  Text.cpp
engine/source/audio/: ALHelpers.cpp  ALResource.cpp  AudioDevice.cpp  AudioDevice.hpp  IAudioReader.cpp  IAudioReader.hpp  Music.cpp  Sound.cpp  SoundBuffer.cpp  SoundSource.cpp  SoundStream.cpp  WaveReader.cpp  WaveReader.hpp
engine/source/components/: DrawableComponent.cpp  SpriteComponent.cpp  TextComponent.cpp  TransformComponent.cpp  UIAnimationComponent.cpp
engine/source/systems/: RenderSystem.cpp  SpriteSystem.cpp  TextSystem.cpp  UIAnimationSystem.cpp  UISystem.cpp
example/: CMakeLists.txt
extlibs/AL/OpenAL/: al.h  alc.h  alext.h  efx-presets.h  efx.h
extlibs/minimp3/: minimp3.h  minimp3_ext.h
scripts/: gen-project.py
template/: CMakeLists.txt  gitignore
template/include/game/: DummyEditor.hpp  GameState.hpp  GameUI.hpp  Input.hpp  InputParser.hpp  IntroState.hpp  Map.hpp  MenuState.hpp  Messages.hpp  MyApplication.hpp  States.hpp  World.hpp
template/include/game/components/: Collision.hpp  PlayerComponent.hpp
template/include/game/systems/: DummyPlayerSystem.hpp
template/res/map/: sample.map
template/source/: Editor.cpp  GameState.cpp  GameUI.cpp  IniReader.cpp  IniReader.hpp  InputParser.cpp  IntroState.cpp  Map.cpp  MenuState.cpp  MyApplicaiton.cpp  World.cpp  main.cpp
template/source/audio/: ALHelpers.cpp  ALHelpers.hpp  AudioData.hpp  AudioDevice.hpp  IAudioReader.hpp  Music.cpp  Music.hpp  Sound.cpp  Sound.hpp  SoundBuffer.cpp  SoundBuffer.hpp  SoundSource.cpp  SoundSource.hpp  SoundStream.cpp  SoundStream.hpp  WaveReader.cpp  WaveReader.hpp
template/source/systems/: DummyPlayerSystem.cpp  DynamicTreeSystem.cpp  DynamicTreeSystem.hpp
